rectangle left alignment fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -276,6 +276,7 @@
 
 .rectangle-1 {
   position: relative;
+  margin-left: auto;
 }
 
 .circle-1 {
